[tool.poetry]
name = "note-writer"
version = "0.1.0"
description = ""
authors = ["scratchyone <root@rachel.systems>"]
readme = "README.md"
packages = [{include = "note_writer"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
ffmpeg-python = "^0.2.0"
whispercpp = "^0.0.17"
openai = "^0.27.10"
PyAudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
